# snake-arena-live

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts
backend/: .dockerignore  Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml  seed.py
backend/app/: crud.py  database.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  leaderboard.py  players.py
backend/test_integration/: conftest.py  test_scenarios.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/lib/: gameLogic.test.ts  mockApi.test.ts
frontend/src/components/: GameBoard.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useSnakeGame.ts
frontend/src/lib/: api.ts  gameLogic.ts  mockApi.ts
frontend/src/pages/: Index.tsx  Leaderboard.tsx  Spectate.tsx
src/: index.css
src/components/: GameBoard.tsx  GameControls.tsx  Header.tsx  ModeSelector.tsx
src/hooks/: useSnakeGame.ts
src/lib/: gameLogic.test.ts  mockApi.test.ts
src/pages/: Auth.tsx  Index.tsx  Leaderboard.tsx  NotFound.tsx  Spectate.tsx
